--- a/index.html
+++ b/index.html
@@ -10,12 +10,43 @@
 
 <body>
     <main>
-        <div class="textos">
+        <div class="container">
             <h1>Gacha dos adms</h1>
             <h3>Clique no botão para descobrir seu adm</h3>
-            <button class="button-85" role="button">Roletar seu adm</button>
+            <button class="button-85" id="gachabotao">Roletar seu adm</button>
+            <div class="resultado" id="gachaImagemdiv">
+                <img id="gachaImagem" alt="oi">
+                <p id="RaridadeTexto"></p>
+                <p id="nome"></p>
+                <button id="informaçoes">Informações</button>
+                <div id="tela">
+                    <div class="conteudo">
+                        <p>Você pode clicar a cada 1 segundo.</p><br>
+
+                        <p>As Raridades são:</p><br>
+
+                        <p id="Comum">Comum: 70%</p>
+                        <p id="Raro">Raro: 20%</p>
+                        <p id="Épico">Épico: 8.5%</p>
+                        <p id="Lendário">Lendário: 1%</p>
+                        <p id="Mítico">Mítico: 0.49%</p>
+                        <strong><p id="Secreto">Secreto: 0.01%</p><br></strong>
+
+                        <p>O pity é de 100 cliques, E suas chances são 10x maiores</p><br>
+
+                        <p id="Comum">Comum: 1%</p>
+                        <p id="Raro">Raro: 5%</p>
+                        <p id="Épico">Épico: 25%</p>
+                        <p id="Lendário">Lendário: 15%</p>
+                        <p id="Mítico">Mítico: 10%</p>
+                        <strong></strong><p id="Secreto">Secreto: 5%</p></strong>
+
+                        <button id="fechar">Fechar</button>
+                    </div>
+                </div>
+                <p class="Pity" id="Pity"">Pity:</p>
+            </div>
         </div>
         <script src="script.js"></script>
     </main>
 </body>
-</html>
