--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <p id="Mítico">Mítico: 0.49%</p>
                         <strong><p id="Secreto">Secreto: 0.01%</p><br></strong>
 
-                        <p>O pity é de 100 cliques, E suas chances são muito maiores</p><br>
+                        <p>O pity é de 100 cliques, e suas chances são muito maiores</p><br>
 
                         <p id="Comum">Comum: 1%</p>
                         <p id="Raro">Raro: 5%</p>
@@ -51,4 +51,5 @@
     </main>
 </body>
 </html>
+
 
