--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <p id="Épico">Épico: 25%</p>
                         <p id="Lendário">Lendário: 15%</p>
                         <p id="Mítico">Mítico: 10%</p>
-                        <strong></strong><p id="Secreto">Secreto: 5%</p></strong>
+                        <strong>><p id="Secreto">Secreto: 5%</p></strong>
 
                         <button id="fechar">Fechar</button>
                     </div>
@@ -51,5 +51,6 @@
     </main>
 </body>
 </html>
+
 
 
