--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gacha dos adm</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/jpg" href="Assets/Icone_Gacha.jpg">
 </head>
 
 <body>
@@ -51,6 +52,7 @@
     </main>
 </body>
 </html>
+
 
 
 
