--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
                 <p id="RaridadeTexto"></p>
                 <p id="nome"></p>
                 <button id="informaçoes">Informações</button>
+
+                <div id="raridade_maior" class="Aviso">
+                    <h1>Você pegou uma raridade alta.</h1><br>
+                    <h3>Deseja girar?</h3><br>
+                    <button id="botao_sim" class="sim_e_nao">Sim</button><br>
+                    <button id="botao_nao" class="sim_e_nao">Não</button>
+                </div>
+
                 <div id="tela">
                     <div class="conteudo">
                         <p>Você pode clicar a cada 1 segundo.</p><br>
@@ -40,7 +48,7 @@
                         <p id="Épico">Épico: 25%</p>
                         <p id="Lendário">Lendário: 15%</p>
                         <p id="Mítico">Mítico: 10%</p>
-                        <strong><p id="Secreto">Secreto: 5%</p></strong>
+                        <strong></strong><p id="Secreto">Secreto: 5%</p></strong>
 
                         <button id="fechar">Fechar</button>
                     </div>
@@ -52,9 +60,3 @@
     </main>
 </body>
 </html>
-
-
-
-
-
-
