--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <button class="button-85" id="gachabotao">Roletar seu adm</button>
             <div class="resultado" id="gachaImagemdiv">
                 <img id="gachaImagem" alt="oi">
-                <p id="RaridadeTexto"></p>
-                <p id="nome"></p>
+                <strong><p id="RaridadeTexto"></p></strong>
+                <strong><p id="nome"></p></strong>
                 <button id="informaçoes">Informações</button>
 
                 <div id="raridade_maior" class="Aviso">
