--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                         <p id="Lendário">Lendário: 1%</p>
                         <p id="Mítico">Mítico: 0.49%</p>
                         <strong><p id="Secreto">Secreto: 0.01%</p><br></strong>
+                        <strong><p id="Os bolinha">Os bolinha: 0.0001%</p><br></strong>
 
                         <p>O pity é de 100 cliques, e suas chances são muito maiores</p><br>
 
@@ -49,6 +50,7 @@
                         <p id="Lendário">Lendário: 15%</p>
                         <p id="Mítico">Mítico: 10%</p>
                         <strong></strong><p id="Secreto">Secreto: 5%</p></strong>
+                        <strong><p id="Os bolinha">Os bolinha: 1.5%</p><br></strong>
 
                         <button id="fechar">Fechar</button>
                     </div>
@@ -60,3 +62,4 @@
     </main>
 </body>
 </html>
+
