--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                         <p id="Épico">Épico: 8.5%</p>
                         <p id="Lendário">Lendário: 1%</p>
                         <p id="Mítico">Mítico: 0.49%</p>
-                        <strong><p id="Secreto">Secreto: 0.01%</p><br></strong>
-                        <strong><p id="Os bolinha">Os bolinha: 0.0001%</p><br></strong>
+                        <strong><p id="Secreto">Secreto: 0.01%</p>></strong>
+                        <strong><p id="Os bolinha">Os bolinha: 0.0001%</p></strong><br>
 
                         <p>O pity é de 100 cliques, e suas chances são muito maiores</p><br>
 
@@ -62,4 +62,5 @@
     </main>
 </body>
 </html>
+
 
